--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -33,3 +34,6 @@ dependencies {
 
     implementation 'com.android.support:design:26.1.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
