--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
     }
 }
 
+/* import the specific com.android.support library that you need instead of the whole thing if you have issues */
+
 dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.firebase:firebase-database:11.0.4'
@@ -31,6 +33,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'joda-time:joda-time:2.9.4'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
+
 
     testCompile 'junit:junit:4.12'
 
